grafana-deploy-podman-kube: update config value path

--- a/TerraformWorkShop/Quadlet/grafana/podman-grafana/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/grafana/podman-grafana/values-sololab.yaml
@@ -15,7 +15,7 @@ grafana:
         - -kf
         - https://localhost:3000/api/health
   configFiles:
-    custom:
+    grafana:
       server:
         domain: grafana.day1.sololab
         root_url: https://grafana.day1.sololab
