local-ssh: update ssh config

--- a/LocalWorkShop/.ssh/config
+++ b/LocalWorkShop/.ssh/config
@@ -16,31 +16,17 @@ Host vyos
     IdentitiesOnly yes
     LogLevel FATAL
 
-Host InfSvc-CentOS
+Host Day0-FCOS
     StrictHostKeyChecking no
-    HostName 192.168.255.11
-    User vagrant
-    IdentityFile ~/.ssh/vagrant
-    Port 22
-
-Host InfSvc-Debian
-    StrictHostKeyChecking no
-    HostName 192.168.255.12
-    User vagrant
-    IdentityFile ~/.ssh/vagrant
-    Port 22
-
-Host SvcDisc-FCOS
-    StrictHostKeyChecking no
-    HostName 192.168.255.20
+    HostName 192.168.255.10
     User podmgr
     IdentityFile ~/.ssh/vagrant
     Port 22
 
-Host Dev-Fedora
+Host Day1-FCOS
     StrictHostKeyChecking no
-    HostName 192.168.255.30
-    User devel
+    HostName 192.168.255.20
+    User podmgr
     IdentityFile ~/.ssh/vagrant
     Port 22
 
