traefik-deploy-podman-kube: upgrade image version, update variable structure, update tf provider version

--- a/TerraformWorkShop/Quadlet/traefik-day0/podman-traefik/traefik-traefik.yaml
+++ b/TerraformWorkShop/Quadlet/traefik-day0/podman-traefik/traefik-traefik.yaml
@@ -1,9 +1,10 @@
 http:
   middlewares:
-    toHttps:
-      redirectScheme:
-        scheme: https
-        permanent: true
+    # toHttps middleware already configured in traefik helm config map
+    # toHttps:
+    #   redirectScheme:
+    #     scheme: https
+    #     permanent: true
     userPass:
       basicAuth:
         users:
