FCOS-Day1-Ignition: add traefik file provider dir

--- a/TerraformWorkShop/Hyper-V/VM-Day1-FCOS/Butane/user.yaml
+++ b/TerraformWorkShop/Hyper-V/VM-Day1-FCOS/Butane/user.yaml
@@ -69,6 +69,12 @@ storage:
         id: 1001
       group:
         id: 1001
+    - path: /var/home/podmgr/traefik-file-provider
+      mode: 0700
+      user:
+        id: 1001
+      group:
+        id: 1001
     - path: /var/home/podmgr/consul-services
       mode: 0700
       user:
