traefik-podman-quadlet: improve traefik file provider files resource arrangement, add zot config in file, remove port number in day1 traefik kube file

--- a/TerraformWorkShop/Quadlet/traefik-day1/podman-traefik/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/traefik-day1/podman-traefik/values-sololab.yaml
@@ -1,5 +1,5 @@
 global:
-  imageRegistry: zot.day0.sololab:5000
+  imageRegistry: zot.day0.sololab
 traefik:
   containerPorts: []
   containerSecurityContext:
