fcos-day1-hyperv: update wipe_table to false

--- a/TerraformWorkShop/Hyper-V/VM-Day0-FCOS/Butane/storage.yaml
+++ b/TerraformWorkShop/Hyper-V/VM-Day0-FCOS/Butane/storage.yaml
@@ -4,7 +4,7 @@ storage:
   # data disk
   disks:
     - device: /dev/sdb
-      wipe_table: true
+      wipe_table: false
       partitions:
         - label: 1001
           number: 1
