--- a/TerraformWorkShop/Quadlet/gitea/podman-redis/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/gitea/podman-redis/values-sololab.yaml
@@ -1,16 +1,52 @@
 global:
   imageRegistry: zot.day0.sololab
 redis:
-  containerPorts: []
-  extraEnvVars:
-    - name: TZ
-      value: Asia/Shanghai
-  configFiles:
-    redis:
-      include:
-        - /etc/redis/acl.conf
-    acl:
-      user:
-        - default off
-        - admin on ~* +@all >P@ssw0rd
-        - gitea on ~gitea:* +@all -REPLICAOF -CONFIG -DEBUG -SAVE -MONITOR -ACL -SHUTDOWN >gitea
+  containers:
+    server:
+      containerPorts: []
+      livenessProbe:
+        exec:
+          command:
+            - redis-cli
+            - --user
+            - admin
+            - ping
+      extraEnvVars:
+        - name: TZ
+          value: Asia/Shanghai
+        - name: REDISCLI_AUTH
+          value: P@ssw0rd
+      configFiles:
+        server:
+          include:
+            - /etc/redis/acl.conf
+        acl:
+          user:
+            - default off
+            - admin on ~* +@all >P@ssw0rd
+            - gitea on ~gitea:* +@all -REPLICAOF -CONFIG -DEBUG -SAVE -MONITOR -ACL -SHUTDOWN >gitea
+    sentinel:
+      enabled: true
+      containerPorts: []
+      livenessProbe:
+        exec:
+          command:
+            - redis-cli
+            - -p
+            - "26379"
+            - --user
+            - admin
+            - ping
+      extraEnvVars:
+        - name: TZ
+          value: Asia/Shanghai
+        - name: REDISCLI_AUTH
+          value: P@ssw0rd
+      configFiles:
+        sentinel:
+          include:
+            - /etc/redis/sentinel-acl.conf
+        sentinel-acl:
+          user:
+            - default off
+            - admin on ~* +@all >P@ssw0rd
