--- a/TerraformWorkShop/Quadlet/prometheus/podman-prometheus/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/prometheus/podman-prometheus/values-sololab.yaml
@@ -31,8 +31,8 @@ prometheus:
     traefik.http.routers.prometheus-blackbox-exporter.tls: true
     traefik.http.routers.prometheus-blackbox-exporter.service: prometheus-blackbox-exporter
 
-    traefik.http.services.prometheus-blackbox-exporter.loadBalancer.serversTransport: prometheus-blackbox-exporter@file
-    traefik.http.services.prometheus-blackbox-exporter.loadbalancer.server.scheme: https
+    # traefik.http.services.prometheus-blackbox-exporter.loadBalancer.serversTransport: prometheus-blackbox-exporter@file
+    # traefik.http.services.prometheus-blackbox-exporter.loadbalancer.server.scheme: https
     traefik.http.services.prometheus-blackbox-exporter.loadbalancer.server.port: 9115
   # adopt bitnami image user id
   podAnnotations:
@@ -239,11 +239,11 @@ prometheus:
                 preferred_ip_protocol: "ip4"
                 tls_config:
                   insecure_skip_verify: true
-        web:
-          tls_server_config:
-            cert_file: /etc/blackbox_exporter/certs/blackboxExporter.crt
-            key_file: /etc/blackbox_exporter/certs/blackboxExporter.key
-      flags:
-        web:
-          config:
-            file: /etc/blackbox_exporter/blackbox_exporter_web.yml
+      #   web:
+      #     tls_server_config:
+      #       cert_file: /etc/blackbox_exporter/certs/blackboxExporter.crt
+      #       key_file: /etc/blackbox_exporter/certs/blackboxExporter.key
+      # flags:
+      #   web:
+      #     config:
+      #       file: /etc/blackbox_exporter/blackbox_exporter_web.yml
