--- a/TerraformWorkShop/Quadlet/consul-server/podman-consul/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/consul-server/podman-consul/values-sololab.yaml
@@ -46,21 +46,23 @@ consul:
           initial_management: e95b599e-166e-7d80-08ad-aee76e7ddf19
           agent: e95b599e-166e-7d80-08ad-aee76e7ddf19
           config_file_service_registration: e95b599e-166e-7d80-08ad-aee76e7ddf19
-      auto_config:
-        authorization:
-          enabled: true
-          static:
-            oidc_discovery_url: https://vault.day1.sololab:8200/v1/identity/oidc
-            oidc_discovery_ca_cert: ## set via helm value
-            bound_issuer: https://vault.day1.sololab:8200/v1/identity/oidc
-            # The value for matching the aud field of the JSON web token (JWT).
-            # The audience aud claim in a JWT is meant to refer to the authorization servers that should accept the token.
-            bound_audiences:
-              - consul-cluster-dc1
-            claim_mappings:
-              /consul/hostname: node_name
-            claim_assertions:
-              - value.node_name == "${node}"
+      # auto_config:
+      #   authorization:
+      #     enabled: true
+      #     static:
+      #       oidc_discovery_url: https://vault.day1.sololab:8200/v1/identity/oidc
+      #       oidc_discovery_ca_cert: ## set via helm value
+      #       bound_issuer: https://vault.day1.sololab:8200/v1/identity/oidc
+      #       # The value for matching the aud field of the JSON web token (JWT).
+      #       # The audience aud claim in a JWT is meant to refer to the authorization servers that should accept the token.
+      #       bound_audiences:
+      #         - consul-cluster-dc1
+      #       claim_mappings:
+      #         /consul/hostname: node_name
+      #       claim_assertions:
+      #         - value.node_name == "${node}"
+      auto_encrypt:
+        allow_tls: true
       bind_addr: '{{ GetInterfaceIP "eth0" }}'
       # log_level: trace
       # https://github.com/hashicorp/learn-consul-docker/blob/110bc9484b0dcd714e64604cd011a360d03b9bc6/datacenter-deploy-auto-config/vault/consul/server2.json#L33
@@ -81,6 +83,7 @@ consul:
           key_file: /consul/config/certs/server.key
           verify_incoming: false
           verify_outgoing: true
+          verify_server_hostname: true
         internal_rpc:
           # verify_incoming: true
           verify_server_hostname: true
